--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mario likes you :)</title></title>
+<title>Mario likes u :)</title></title>
 <style>
   body, html {
     margin: 0;
@@ -25,6 +25,7 @@
 </head>
 <body>
 
+<video id="myVideo" controls autoplay>
   <!-- Provide the path to the video file on your desktop -->
   <source src="https://darkloyd256.github.io/Ooh-nice-computer-you-got-here-Can-i-have-it/video.mp4" type="video/mp4">
   Your browser does not support the video tag.
